Get rid of Lombok's SneakyThrows
- Lombok's SneakyThrows annotation is not really necessary and is currently broken on Java 19, so it has been removed.